  degrees, and the substituted courses was ALSO the same.  FlightPath was applying the sub
  to the first instance of the course requirement, and not necessarily the one the user selected.
  
  Worked on an issue where when two users are working on the same student, they should only pull up
  draft changes that THEY made, not that the other user made.
  

2016-12-16
  Added a new feature to let What If save & load with any catalog year.  Built into the system
  are the options "Current" and "Student".
  
  
2016-12-13
  Fixed bug where zero-hour courses were not allowing repeats correctly.
  
  Added more CSS classes and options to displaying degree titles.
  

2016-11-20
  Converted FlightPath and module licenses' to GNU AGPL Version 3.0.  Generally, it is compatible
  with the previous GPLv3 license, with one addition as it pertains to servers.
  See more here: http://getflightpath.com/gnu-agpl 
   

2016-11-16
  Added ability for a "locked" directive in the student_degrees table.  It lets you lock an entire
  degree classification from editing at a time.


2016-11-14
  Added minor CSS to "Change degree options" link.


2016-11-09
  Fixed minor PHP warning which pie charts were not enabled.
  

2016-11-05
  Made varius modifications to accomodate a student with no assigned major code, or, a major code which could
  not be found in the designated catalog year.


2016-11-01
  Fixed bug where identical courses which had all been advised were not correctly
  being counted as advised/fulfilled when only one was fulfilled, and before the advising term
  was advanced.
  

2016-10-28
  Added a setting to Configure School settings, to hide advising checkmarks if the student has enrolled
  in the course they were advised for (also works for completed as well).

  Added a new permission (in Admin module section) for user to be able to Delete courses, groups, or degrees.
  Also added those checks to the deletion functions for those forms.
  