@@ -9,6 +9,9 @@ FlightPath 5.x Changelog
   Worked on an issue where when two users are working on the same student, they should only pull up
   draft changes that THEY made, not that the other user made.
   
+  To guarantee draft advising sessions aren't loaded inappropriately, when a faculty user loads
+  a student's advising session, the draft versions are deleted.  This is to correct a bug.
+  
 
 2016-12-16
   Added a new feature to let What If save & load with any catalog year.  Built into the system
